Fixed header issue on Safari

--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -70,7 +70,7 @@ button {
       align-items: center;
 
       img {
-        width: 100%;
+        width: 40px;
         height: 40px;
         margin-left: 10px;
       }
